# typeid-python

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  pr.yml  publish-testpypi.yaml  publish.yml  setup.yml  test-rust-accel.yml  test.yml
bench/: README.md  conftest.py  run.sh
bench/benchmarks/: data.py  test_bench_compare.py  test_bench_generate.py  test_bench_parse.py
bench/results/: 0001_before_rust.json  0002_rust_optimized.json
concepts/: index.html
contributing/: index.html
docs/: concepts.md  explain.md  performance.md  quickstart.md
docs/integrations/: index.md  pydantic.md
docs/reference/: cli.md  explain.md  factory.md  typeid.md
docs/reference/integrations/pydantic/: v2.md
examples/: README.md  sqlalchemy.py
examples/explain/: explain_complex.py  explain_report.py  sample_ids.txt
examples/explain/schemas/: typeid.schema.json  typeid.schema.yaml
explain/: index.html
integrations/: index.html
integrations/pydantic/: index.html
performance/: index.html
quickstart/: index.html
reference/cli/: index.html
reference/explain/: index.html
reference/factory/: index.html
reference/integrations/pydantic/v2/: index.html
reference/typeid/: index.html
rust-base32/: Cargo.toml  pyproject.toml
rust-base32/src/: lib.rs
search/: search_index.json
tests/: conftest.py  test_base32.py  test_factory.py  test_spec.py  test_typeid.py  test_uuid_backend.py  test_validation.py
tests/explain/: test_cli.py  test_cli_yaml.py  test_discovery.py  test_engine.py  test_formatters.py  test_registry.py  test_registry_yaml.py
tests/integrations/: test_pydantic.py
typeid/: __init__.py  _uuid_backend.py  base32.py  cli.py  constants.py  errors.py  factory.py  typeid.py  validation.py
typeid/cli/: __init__.py  main.py
typeid/codecs/: base32.py
typeid/core/: constants.py  errors.py  factory.py  parsing.py  typeid.py  validation.py
typeid/explain/: __init__.py  discovery.py  engine.py  formatters.py  model.py  registry.py
typeid/integrations/pydantic/: __init__.py  v2.py
