[project]
name = "typeid-python"
version = "0.3.3"
description = "Python implementation of TypeIDs: type-safe, K-sortable, and globally unique identifiers inspired by Stripe IDs"
authors = [{ name = "Murad Akhundov", email = "akhundov1murad@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "typeid",
    "uuid",
    "uuid6",
    "guid",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = ["uuid6>=2024.7.10,<2026.0.0"]

[project.optional-dependencies]
cli = ["click"]
yaml = ["PyYAML"]

[project.urls]
Homepage = "https://github.com/akhundMurad/typeid-python"
Repository = "https://github.com/akhundMurad/typeid-python"
"Bug Tracker" = "https://github.com/akhundMurad/typeid-python/issues"

[project.scripts]
typeid = "typeid.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.3.2,<8",
    "black>=23.3.0,<24",
    "mypy>=1.3.0,<2",
    "requests>=2.31.0,<3",
    "ruff>=0.14.5,<0.15",
    "twine>=6.2.0,<7",
    "pyyaml>=6.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "pytest-markdown-docs>=0.9.0",
]

[tool.hatch.build.targets.sdist]
include = ["typeid"]

[tool.hatch.build.targets.wheel]
include = ["typeid"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# DEPRECATED poetry configuration:

[tool.poetry]
name = "typeid-python"
version = "0.3.3"
description = "Python implementation of TypeIDs: type-safe, K-sortable, and globally unique identifiers inspired by Stripe IDs"
authors = ["Murad Akhundov <akhundov1murad@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/akhundMurad/typeid-python"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
keywords = ["typeid", "uuid", "uuid6", "guid"]
packages = [{ include = "typeid" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
uuid6 = ">=2024.7.10,<2026.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
mypy = "^1.3.0"
requests = "^2.31.0"
pyyaml = "^6.0"
ruff = "^0.14.5"
twine = "^6.2.0"

[tool.poetry.extras]
cli = ["click"]
yaml = ["PyYAML"]

[tool.poetry.scripts]
typeid = "typeid.cli:cli"

[tool.pylint]
disable = ["C0111", "C0116", "C0114", "R0903"]

[tool.ruff]
line-length = 119
target-version = "py310"
src = ["typeid", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E203", "B028"]

[tool.ruff.lint.isort]
known-first-party = ["typeid"]
