[project]
name = "typeid-python"
version = "0.3.8"
description = "Python implementation of TypeIDs: type-safe, K-sortable, and globally unique identifiers inspired by Stripe IDs"
authors = [{ name = "Murad Akhundov", email = "akhundov1murad@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["typeid", "uuid", "rust", "guid", "uuid7"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
dependencies = ["uuid-utils>=0.12.0"]

[project.optional-dependencies]
cli = ["click"]
yaml = ["PyYAML"]

[project.urls]
Homepage = "https://github.com/akhundMurad/typeid-python"
Repository = "https://github.com/akhundMurad/typeid-python"
"Bug Tracker" = "https://github.com/akhundMurad/typeid-python/issues"

[project.scripts]
typeid = "typeid.cli.main:cli"

[dependency-groups]
dev = [
  "pytest>=7.3.2,<8",
  "black>=23.3.0,<24",
  "mypy>=1.3.0,<2",
  "requests>=2.31.0,<3",
  "ruff>=0.14.5,<0.15",
  "twine>=6.2.0,<7",
  "pyyaml>=6.0",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.0",
  "mkdocs-git-revision-date-localized-plugin>=1.5.0",
  "mkdocs-gen-files>=0.6.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-section-index>=0.3.10",
  "pytest-markdown-docs>=0.9.0",
  "pytest-benchmark>=5.0.1",
  "maturin>=1.5; platform_system != 'Windows'",
  "pre-commit>=4.5.1",
  "httpx>=0.28.1",
  "pydantic>=2,<3",
]

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.mypy]
pretty = true

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
manifest-path = "rust-base32/Cargo.toml"
module-name = "typeid._base32"
features = ["pyo3/extension-module"]
include = ["LICENSE", "README.md", "typeid/**", "rust-base32/**"]
