[package]
name = "typeid-base32"
version = "0.3.6"
edition = "2021"

description = "Rust-accelerated base32 codec for typeid-python"
license = "MIT"
repository = "https://github.com/akhundMurad/typeid-python"

[lib]
name = "_base32"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
