[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "typeid-base32"
version = "0.3.6"
requires-python = ">=3.10"
description = "Rust-accelerated base32 codec for typeid-python"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[tool.maturin]
# This is the *import/module name* in Python: `import typeid_base32`
module-name = "typeid_base32"
features = ["pyo3/extension-module"]
